* Added copyright protections from Calla-Lily * Removed options to change between single and spread * Removed white background on pageholders * Wrapper component no longer hides bottom behind toolbar

--- a/src/components/pdf.module.css
+++ b/src/components/pdf.module.css
@@ -19,7 +19,7 @@
 
 .rightPage {
   grid-area: right;
-  /* background-color: transparent !important; */
+  background-color: transparent !important;
 
 }
 
